Fixed json output and converted to static